--- a/Classes/Env.html
+++ b/Classes/Env.html
@@ -46,7 +46,9 @@
 <li class='toc3'><a href='#*circle'>circle</a> </li>
 </ul><li class='toc2'><a href='#Multichannel%20expansion'>Multichannel expansion</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
-</ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc3'><a href='#*fromSVGPolyLine'>fromSVGPolyLine</a> </li>
+</ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-ar'>ar</a>  <a href='#-kr'>kr</a> </li>
 <li class='toc3'><a href='#-blend'>blend</a> </li>
 <li class='toc3'><a href='#-delay'>delay</a> </li>
@@ -67,21 +69,33 @@
 </ul><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 <li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-=='>==</a> </li>
+<li class='toc3'><a href='#-arAt'>arAt</a> </li>
 <li class='toc3'><a href='#-array'>array</a> </li>
+<li class='toc3'><a href='#-arrayFill'>arrayFill</a> </li>
 <li class='toc3'><a href='#-asArrayForInterpolation'>asArrayForInterpolation</a> </li>
 <li class='toc3'><a href='#-asControlInput'>asControlInput</a> </li>
 <li class='toc3'><a href='#-asMultichannelSignal'>asMultichannelSignal</a> </li>
 <li class='toc3'><a href='#-asOSCArgEmbeddedArray'>asOSCArgEmbeddedArray</a> </li>
+<li class='toc3'><a href='#-asPolyLine'>asPolyLine</a> </li>
 <li class='toc3'><a href='#-asPseg'>asPseg</a> </li>
+<li class='toc3'><a href='#-asSVGFile'>asSVGFile</a> </li>
+<li class='toc3'><a href='#-asSVGGroup'>asSVGGroup</a> </li>
+<li class='toc3'><a href='#-asSVGPolyLine'>asSVGPolyLine</a> </li>
+<li class='toc3'><a href='#-asSpec'>asSpec</a> </li>
+<li class='toc3'><a href='#-asWarp'>asWarp</a> </li>
 <li class='toc3'><a href='#-curveValue'>curveValue</a> </li>
 <li class='toc3'><a href='#-curves'>curves</a> </li>
 <li class='toc3'><a href='#-discretize'>discretize</a> </li>
 <li class='toc3'><a href='#-hash'>hash</a> </li>
+<li class='toc3'><a href='#-krAt'>krAt</a> </li>
 <li class='toc3'><a href='#-levels'>levels</a> </li>
 <li class='toc3'><a href='#-loopNode'>loopNode</a> </li>
+<li class='toc3'><a href='#-maxLevel'>maxLevel</a> </li>
+<li class='toc3'><a href='#-minLevel'>minLevel</a> </li>
 <li class='toc3'><a href='#-offset'>offset</a> </li>
 <li class='toc3'><a href='#-releaseNode'>releaseNode</a> </li>
 <li class='toc3'><a href='#-releaseTime'>releaseTime</a> </li>
+<li class='toc3'><a href='#-timeLine'>timeLine</a> </li>
 <li class='toc3'><a href='#-times'>times</a> </li>
 </ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'><li class='toc2'><a href='#blend'>blend</a></li>
@@ -393,7 +407,10 @@ Env.xyc({ [1.0.rand, 1.0.rand, {[\lin, \exp, \step].choose} ! 3] } ! 8).plot
 
 Env.xyc([[[2.0, 2.3], 0.5, \lin], [0, 1, \lin], [3, 1.4, \lin]]).plot; // multiple times</pre>
 <h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*fromSVGPolyLine' href='./../Overviews/Methods.html#fromSVGPolyLine'>fromSVGPolyLine</a> (<span class='argstr'>polyline</span>, <span class='argstr'>min: -1</span>, <span class='argstr'>max: 1</span>, <span class='argstr'>duration: 1</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc</a></div>
+<h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>doneAction: 0</span>, <span class='argstr'>gate: 1</span>, <span class='argstr'>timeScale: 1</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-kr' href='./../Overviews/Methods.html#kr'>kr</a> (<span class='argstr'>doneAction: 0</span>, <span class='argstr'>gate: 1</span>, <span class='argstr'>timeScale: 1</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
 <div class='method'>
@@ -543,28 +560,52 @@ e = Env.sine.asStream;
 </div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-==' href='./../Overviews/Methods.html#=='>==</a> (<span class='argstr'>that</span>)</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-arAt' href='./../Overviews/Methods.html#arAt'>arAt</a> (<span class='argstr'>index</span>, <span class='argstr'>div: 10</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Shortcuts/SystemOverwrites/extEnv-kr.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Shortcuts/SystemOverwrites/extEnv-kr.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-array' href='./../Overviews/Methods.html#array'>array</a> </h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-arrayFill' href='./../Overviews/Methods.html#arrayFill'>arrayFill</a> (<span class='argstr'>size: 10</span>, <span class='argstr'>keepSize: true</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Shortcuts/SystemOverwrites/extEnv-kr.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Shortcuts/SystemOverwrites/extEnv-kr.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asArrayForInterpolation' href='./../Overviews/Methods.html#asArrayForInterpolation'>asArrayForInterpolation</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asControlInput' href='./../Overviews/Methods.html#asControlInput'>asControlInput</a> </h3>
 <div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/extConvertToOSC.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/extConvertToOSC.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asMultichannelSignal' href='./../Overviews/Methods.html#asMultichannelSignal'>asMultichannelSignal</a> (<span class='argstr'>length: 400</span>, <span class='argstr'>class</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asOSCArgEmbeddedArray' href='./../Overviews/Methods.html#asOSCArgEmbeddedArray'>asOSCArgEmbeddedArray</a> (<span class='argstr'>array</span>)</h3>
 <div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/extConvertToOSC.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/extConvertToOSC.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-asPolyLine' href='./../Overviews/Methods.html#asPolyLine'>asPolyLine</a> (<span class='argstr'>width: 1</span>, <span class='argstr'>height: 1</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/GUI/Drawing/extEnv-asPolyLine.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/GUI/Drawing/extEnv-asPolyLine.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asPseg' href='./../Overviews/Methods.html#asPseg'>asPseg</a> </h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-asSVGFile' href='./../Overviews/Methods.html#asSVGFile'>asSVGFile</a> (<span class='argstr'>path: "~/Desktop/Env.svg"</span>, <span class='argstr'>width: 400</span>, <span class='argstr'>height: 200</span>, <span class='argstr'>scale: 1</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-asSVGGroup' href='./../Overviews/Methods.html#asSVGGroup'>asSVGGroup</a> (<span class='argstr'>width: 400</span>, <span class='argstr'>height: 200</span>, <span class='argstr'>name: "group"</span>, <span class='argstr'>scale: 1</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-asSVGPolyLine' href='./../Overviews/Methods.html#asSVGPolyLine'>asSVGPolyLine</a> (<span class='argstr'>width: 400</span>, <span class='argstr'>height: 200</span>, <span class='argstr'>name</span>, <span class='argstr'>strokeColor</span>, <span class='argstr'>fillColor</span>, <span class='argstr'>strokeWidth</span>, <span class='argstr'>transform</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-asSpec' href='./../Overviews/Methods.html#asSpec'>asSpec</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/SegWarp.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/SegWarp.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-asWarp' href='./../Overviews/Methods.html#asWarp'>asWarp</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/SegWarp.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/SegWarp.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-curveValue' href='./../Overviews/Methods.html#curveValue'>curveValue</a> (<span class='argstr'>curve</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-curves' href='./../Overviews/Methods.html#curves'>curves</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-curves' href='./../Overviews/Methods.html#curves'>curves</a> = <span class='argstr'>z</span></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-discretize' href='./../Overviews/Methods.html#discretize'>discretize</a> (<span class='argstr'>n: 1024</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-hash' href='./../Overviews/Methods.html#hash'>hash</a> </h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-krAt' href='./../Overviews/Methods.html#krAt'>krAt</a> (<span class='argstr'>index</span>, <span class='argstr'>div: 10</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Shortcuts/SystemOverwrites/extEnv-kr.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Lang/Shortcuts/SystemOverwrites/extEnv-kr.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-levels' href='./../Overviews/Methods.html#levels'>levels</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-levels' href='./../Overviews/Methods.html#levels'>levels</a> = <span class='argstr'>z</span></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-loopNode' href='./../Overviews/Methods.html#loopNode'>loopNode</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-loopNode' href='./../Overviews/Methods.html#loopNode'>loopNode</a> = <span class='argstr'>z</span></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-maxLevel' href='./../Overviews/Methods.html#maxLevel'>maxLevel</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-minLevel' href='./../Overviews/Methods.html#minLevel'>minLevel</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-offset' href='./../Overviews/Methods.html#offset'>offset</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-offset' href='./../Overviews/Methods.html#offset'>offset</a> = <span class='argstr'>z</span></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-releaseNode' href='./../Overviews/Methods.html#releaseNode'>releaseNode</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-releaseNode' href='./../Overviews/Methods.html#releaseNode'>releaseNode</a> = <span class='argstr'>z</span></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-releaseTime' href='./../Overviews/Methods.html#releaseTime'>releaseTime</a> </h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-timeLine' href='./../Overviews/Methods.html#timeLine'>timeLine</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Main Features/SVGFile/SystemOverwrites/extEnv-asSVGFile.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-times' href='./../Overviews/Methods.html#times'>times</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-times' href='./../Overviews/Methods.html#times'>times</a> = <span class='argstr'>z</span></h3>
 <h2><a class='anchor' name='examples'>Examples</a></h2>
