--- a/Computer.html
+++ b/Computer.html
@@ -22,10 +22,8 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Project%20Proposals'>Project Proposals</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Computer.play%20-%20Seminar%20Presentations'>Computer.play - Seminar Presentations</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Class%20Presentations'>Class Presentations</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Extra%20Sessions'>Extra Sessions</a></li>
+<ul class='toc'><li class='toc2'><a href='#Computer.play%20-%20Tutorial%202:%20Monday,%2020%20February'>Computer.play - Tutorial 2: Monday, 20 February</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Extra%20Session'>Extra Session</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
@@ -33,14 +31,10 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<h3><a class='anchor' name='Project%20Proposals'>Project Proposals</a></h3>
-
-<p>You will have to write a <strong>project proposal</strong> per group for your <strong>final project</strong>. The proposal will be approximately a page long (A4) and should include a list of group members (full names please) and a brief summary of the project you wish to undertake. It doesn't matter if you slightly change your project later - this is just for me to get an idea of what to expect so that I can advise and support you.<div class='note'><span class='notelabel'>NOTE:</span> You will need to send me the proposal via email before <strong>Friday, 10 February</strong>.</div><h3><a class='anchor' name='Computer.play%20-%20Seminar%20Presentations'>Computer.play - Seminar Presentations</a></h3>
+<h3><a class='anchor' name='Computer.play%20-%20Tutorial%202:%20Monday,%2020%20February'>Computer.play - Tutorial 2: Monday, 20 February</a></h3>
 <table>
-<tr><td><strong>Tuesday, 14 February</strong><td><strong>Friday, 17 February</strong><tr><td>WILLIAM BARNARDO<td>ELIZABETH PHIPPARD<tr><td>DOMINIC CRAMP<td>TOBIAS RANDALL-PALEY<tr><td>FELCITY MARGERESON<td>EMILY SULLIVIN<tr><td>CHRISTOPHER MURPHY<td>JAN TAN<tr><td>TOM HORNER<td>FREDERICK WORDSWORTH<tr><td>THOMAS JAMES<td>BENJAMIN STRANGE<tr><td>ATHENE BROAD<td>GABRIEL WALKER<tr><td>BARRINGTON BROOK<td>SARAH PENDLETON<tr><td>ALAN FOWLER<td>POPPY RICE<tr><td>MATILDA GANNON<td>ERIN ROBINSON<tr><td>KATHARINE LOVELL<td>CATHERINE ROBSON</table>
-<h3><a class='anchor' name='Class%20Presentations'>Class Presentations</a></h3>
-
-<p>I have decided to postpone the <strong>class presentations</strong> a few days because of the session I had to cancel this week due to illness. Instead of them happening on the 10 and 14 of February, now they will be on the 14 and 17. This will give you a few days extra to prepare. You can see which day you are presenting in the table above.<div class='note'><span class='notelabel'>NOTE:</span> The <strong>class presentations</strong> will now be happening on the <strong>14 and 17 of February</strong></div><h3><a class='anchor' name='Extra%20Sessions'>Extra Sessions</a></h3>
+<tr><td>09:00<td>TOM HORNER<tr><td>09:20<td>ALAN FOWLER<tr><td>09:40<td>CHRISTOPHER MURPHY<tr><td>09:40<td>DOMINIC CRAMP<tr><td>09:40<td>FREDERICK WORDSWORTH<tr><td>10:35<td>JAN TAN<tr><td>10:35<td>WILLIAM BARNARDO<tr><td>11:15<td>GABRIEL WALKER<tr><td>11:15<td>BENJAMIN STRANGE<tr><td>11:15<td>THOMAS JAMES<tr><td>12:10<td>ELIZABETH PHIPPARD<tr><td>12:10<td>TOBIAS RANDALL-PALEY<tr><td>12:10<td>POPPY RICE<tr><td>14:00<td>FELCITY MARGERESON<tr><td>14:00<td>KATHARINE LOVELL<tr><td>14:00<td>ATHENE BROAD<tr><td>14:55<td>MATILDA GANNON<tr><td>14:55<td>SARAH PENDLETON<tr><td>14:55<td>EMILY SULLIVIN<tr><td>15:50<td>BARRINGTON BROOK<tr><td>15:50<td>ERIN ROBINSON<tr><td>15:50<td>CATHERINE ROBSON</table>
+<div class='warning'><span class='warninglabel'>WARNING:</span> Given that the MRC is undergoing a lift replacement next to my office (including <em>BEAUTIFUL</em> drilling noises all day...), I've booked the <strong>Lyons Studio</strong> for the tutorials. For those who are not familiar with the <strong>Lyons Studio</strong>, it is the studio located in the upper floor of the Music Department main building (SJLCH), past the door, to the left.</div><h3><a class='anchor' name='Extra%20Session'>Extra Session</a></h3>
 
 <p>I will do an extra session on <strong>Tuesday, 21 February</strong> instead of the session that was cancelled this week. In addition, after that date we will have tutorials and troubleshooting sessions.<div class='note'><span class='notelabel'>NOTE:</span> We will have an extra teaching session on <strong>Tuesday, 21 February</strong></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
@@ -66,7 +60,6 @@
 
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
-<p>15/02/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-nick-collins/">Research Seminar: Nick Collins</a>
 <p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a>
 <p>26/04/2017 <a href="https://www.mstrcyork.org/people/jez-wells/">Research Seminar: Jez Wells</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
