--- a/Study Guides/Audio Analysis and Machine Listening.html
+++ b/Study Guides/Audio Analysis and Machine Listening.html
@@ -160,7 +160,7 @@ a = Buffer.loadDialog;
 
 Ndef(\input, {PlayBuf.ar(a.numChannels, a.bufnum, BufRateScale.kr(a.bufnum), loop: 1)});</pre>
 
-<p>The contents of buffer a can be changed to test different sounds with the UGens.
+<p>The contents of buffer <em>a</em> can be changed to test different sounds with the UGens.
 <p>In most of the UGens demonstrations, input parameters will be derived from the mouse to allow quick testing of the meaning of the parameters.
 <p><strong>PV_MagAbove</strong>
 <p><em>plays bins above a certain amp threshold.</em><ul>
@@ -637,16 +637,18 @@ c.wait;
 }.fork;
 )</pre>
 
-<p>Now, this is more manageable! So, for example, we can use the strongest bins now to write some real-time spectral music... We're going to take the frequency and magnitudes from our analysis and use a synth to play them.<pre class='code prettyprint lang-sc'>Ndef(\resynthesis, Pdef(\partials)).play;
-
+<p>Now, this is more manageable! So, for example, we can use the strongest bins now to write some real-time spectral music... We're going to take the frequency and magnitudes from our analysis and use a synth to play them.<pre class='code prettyprint lang-sc'>//synth for resynthesis - here just a SinOsc
 (
-SynthDef("resynth", {arg out=0, freq=440, gate=0, amp=1;
+Ndef(\resynthesis, {arg out=0, freq=440, amp=0, atk=0.01,sus=1,rel=1;
     var signal, env;
     signal = SinOsc.ar(freq, 0, amp);
-    env = EnvGen.kr(Env.adsr(0.05,0.5,0.9,0.2), gate, doneAction:2);
+    env = EnvGen.kr(Env.linen(atk,sus,rel), doneAction:2);
     Out.ar(out, signal*env);
-}).add;
+}).play;
 )
+
+Ndef(\analyse).set(\num, 10); //change number of partials
+
 //sing a note and while you're singing run this:
 (
 {
@@ -656,9 +658,10 @@ c = Condition.new(false);
 });
 c.wait;
 ~arr = [~freqs,~mags].flop.reject({|item| item[1] == 0});
-    Pdef(\partials, Pbind(\instrumnet, \resynth, \freq, ~arr.flop[0].flat,
-        \amp, ~arr.flop[1].flat / ~windowSize, \dur, Prand([3,4],1)) ).play;
-~arr.do{|item| item.postln};
+    ~arr.do{|item| item.postln;
+        Ndef(\resynthesis).spawn([\freq, item[0],\amp, item[1] / ~windowSize,
+            \sus, rrand(0.1,2), \rel, rrand(0.2,1) ]);
+            };
 }.fork;
 )</pre>
 <h3><a class='anchor' name='FFT%20stretching'>FFT stretching</a></h3>
