--- a/Classes/Pchain.html
+++ b/Classes/Pchain.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,22 +19,22 @@
 <div id='summary'>pass values from stream to stream</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc'>Patterns.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Streams/Patterns.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Pattern.html">Pattern</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Pbindf.html">Pbindf</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-<>'>&lt;&gt;</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-embedInStream'>embedInStream</a> </li>
 <li class='toc3'><a href='#-patterns'>patterns</a> </li>
 </ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#pattern composition'>pattern composition</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#pattern%20composition'>pattern composition</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 <dl>
 <dt>Pchain(pattern1, pattern2, ... patternN)<dd>pattern1 &lt;- pattern2 &lt;- ...patternN</dl>
@@ -46,12 +45,12 @@
 <p><h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>... patterns<td class='argumentdesc'>
-<p>The patterns to be chained up.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>The patterns to be chained up.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-<>' href='./../Overviews/Methods.html#&lt;&gt;'>&lt;&gt;</a> (<span class='argstr'>aPattern</span>)</h3>
 <div class='method'>
-<p>Add another pattern to the chain.</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p>Add another pattern to the chain.</div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-embedInStream' href='./../Overviews/Methods.html#embedInStream'>embedInStream</a> (<span class='argstr'>inval</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-patterns' href='./../Overviews/Methods.html#patterns'>patterns</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-patterns' href='./../Overviews/Methods.html#patterns'>patterns</a> = value</h3>
@@ -89,7 +88,7 @@ c = Prand([
 ], inf);
 Pchain(a, b, c).trace.play;
 )</pre>
-<h2><a class='anchor' name='pattern composition'>pattern composition</a></h2>
+<h2><a class='anchor' name='pattern%20composition'>pattern composition</a></h2>
 
 <p>pattern &lt;&gt; pattern &lt;&gt; pattern<pre class='code prettyprint lang-sc'>// implicitly, the composition operator &lt;&gt; returns a Pchain when applied to a pattern.
 // so that a &lt;&gt; b creates a Pchain (a, b).
@@ -124,4 +123,4 @@ t = (a &lt;&gt; b &lt;&gt; c).asStream;
 t = (b &lt;&gt; c &lt;&gt; a).asStream;
 10.do { t.value(10).postln };</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pchain.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pchain.schelp</a><br>link::Classes/Pchain::<br>sc version: 3.5.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pchain.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Pchain.schelp</a><br>link::Classes/Pchain::<br>sc version: 3.8.0</div></div></body></html>
