--- a/Computer.html
+++ b/Computer.html
@@ -22,9 +22,9 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#PRACTICAL%20PROJECT%20DATES!'>PRACTICAL PROJECT DATES!</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Tutorials%20-%20week%209'>Tutorials - week 9</a></li>
+<ul class='toc'><li class='toc2'><a href='#Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Troubleshooting%20Sessions'>Troubleshooting Sessions</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Tutorials%20-%20week%209'>Tutorials - week 9</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
@@ -32,17 +32,18 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<h3><a class='anchor' name='PRACTICAL%20PROJECT%20DATES!'>PRACTICAL PROJECT DATES!</a></h3>
-<div class='warning'><span class='warninglabel'>WARNING:</span> We have dates for the practical project presentations!!</div>
+<h3><a class='anchor' name='Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></h3>
+<div class='warning'><span class='warninglabel'>WARNING:</span> We now have dates for the presentation of your practical work!!</div>
 <p>We have now arrived at 2 dates for the Computer.play performances/installations:
 <p><strong>WEEK 9 - Saturday, 11 MARCH</strong>
-<p><strong>WEEK 12 - THURSDAY, 30 MARCH</strong><h3><a class='anchor' name='Tutorials%20-%20week%209'>Tutorials - week 9</a></h3>
-
-<p><strong>Tutorials - Monday, 6 March</strong><h3><a class='anchor' name='Troubleshooting%20Sessions'>Troubleshooting Sessions</a></h3>
+<p><strong>WEEK 12 - THURSDAY, 30 MARCH</strong><h3><a class='anchor' name='Troubleshooting%20Sessions'>Troubleshooting Sessions</a></h3>
 
 <p>We are having 2 troubleshooting sessions in preparation for the performances/installations:<ul>
 <li>7 MARCH, 9:30<li>24 MARCH, 14:00</ul>
-<h2><a class='anchor' name='Module'>Module</a></h2>
+<h3><a class='anchor' name='Tutorials%20-%20week%209'>Tutorials - week 9</a></h3>
+
+<p>We are having our last tutorials on week 9:
+<p><strong>Tutorials - Monday, 6 March</strong><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
