--- a/Computer.html
+++ b/Computer.html
@@ -35,11 +35,11 @@
 <h3><a class='anchor' name='Dates%20for%20Performances/Installations!'>Dates for Performances/Installations!</a></h3>
 <div class='warning'><span class='warninglabel'>WARNING:</span> We now have dates for the presentation of your practical work!!</div>
 <p>We have now arrived at 2 dates for the Computer.play performances/installations:
-<p><strong>WEEK 9 - Saturday, 11 MARCH</strong>
+<p><strong>WEEK 9 - SATURDAY, 11 MARCH</strong>
 <p><strong>WEEK 12 - THURSDAY, 30 MARCH</strong><h3><a class='anchor' name='Troubleshooting%20Sessions'>Troubleshooting Sessions</a></h3>
 
 <p>We are having 2 troubleshooting sessions in preparation for the performances/installations:<ul>
-<li>7 MARCH, 9:30<li>24 MARCH, 14:00</ul>
+<li>TUESDAY, 7 MARCH, 9:30<li>FRIDAY, 24 MARCH, 14:00</ul>
 <h3><a class='anchor' name='Tutorials%20-%20week%209'>Tutorials - week 9</a></h3>
 
 <p>We are having our last tutorials on week 9:
@@ -67,6 +67,7 @@
 
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
+<p>27/02/2017 <a href="https://www.york.ac.uk/music/news-and-events/events/research/2016-17/spring-week-7-a/">Workshop: Megumi Masaki - Piano and Electronics</a>
 <p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a>
 <p>26/04/2017 <a href="https://www.mstrcyork.org/people/jez-wells/">Research Seminar: Jez Wells</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
