change to comp with comp 2

--- a/Seminars/Composing with Computers 2.html
+++ b/Seminars/Composing with Computers 2.html
@@ -278,12 +278,18 @@ Furthermore, the organizing principles of serialism inspired mathematical analog
 ~smallLetters = (97..122).asAscii;
 ~capitalLetters = (65..90).asAscii;
 ~probabilities = [];
-~smallLetters.do{|item, index| ~probabilities = ~probabilities.add(((~text.findAll(item.asString).size + ~text.findAll(~capitalLetters[index]).size / ~text.size)))};
+~smallLetters.do{|item, index|
+        ~probabilities = ~probabilities.add(
+            ~text.findAll(item.asString).size +
+                ~text.findAll(~capitalLetters[index]).size / ~text.size;
+    )
+    };
 ~probabilities = ~probabilities++[1-~probabilities.sum];
 };
 )
 //routine to play notes
 (
+~update.value;
 {
 var note;
 inf.do{
@@ -591,13 +597,16 @@ Ndef(\tendency).play;
 Ndef(\tendency).fadeTime = 2.0;
 )
 
+(
 Ndef(\tendency, {var freq;
     freq = TTendency.ar(Impulse.kr(5), 0, 200, 800).poll;
     SinOsc.ar(freq!2)*0.1;
 });
+)
 
 Ndef(\tendency, {})
 
+(
 Ndef(\tendency, {arg modFreq=0.1;
     var freq, env1, env2;
     env1 = LFTri.kr(modFreq).linexp(-1,1,200,800);
@@ -605,9 +614,11 @@ Ndef(\tendency, {arg modFreq=0.1;
     freq = TTendency.ar(Impulse.kr(10), 0, env1, env2).poll;
     SinOsc.ar(freq!2)*0.1;
 });
+)
 
 Ndef(\tendency, {});
 
+(
 Ndef(\tendency, {arg modFreq=0.1;
     var freq, env1, env2;
     env1 = LFTri.kr(modFreq).linexp(-1,1,200,800);
@@ -615,9 +626,11 @@ Ndef(\tendency, {arg modFreq=0.1;
     freq = TTendency.ar(Impulse.kr(10), 4, env1, env2,  MouseX.kr(1,0), MouseX.kr(0,1)).poll;
     SinOsc.ar(freq!2)*0.1;
 });
+)
 
 Ndef(\tendency, {});
 
+(
 Ndef(\tendency, {arg trigFreq=10;
     var freq, env1, env2, modFreq;
     modFreq = MouseY.kr(0.05,3);
@@ -627,6 +640,7 @@ Ndef(\tendency, {arg trigFreq=10;
     freq = freq.cpsmidi.round(1).midicps;
     LPF.ar(Saw.ar(freq!2)*0.1, (env2*2));
 });
+)
 
 Ndef(\tendency).set(\trigFreq, 30);
 Ndef(\tendency).set(\trigFreq, 10);
@@ -655,7 +669,6 @@ a = ModernLife.new; //will pop up the window
 a = ModernLife.new(8, 500); //numDivs, winSize (pixels)
 a.userFunc_({|states, population| states.postcs; population.postln; });
 //press space
-
 
 // conway's gol by default
 a = ModernLife.new.play;
